Bump version to 1.3.5
-Renamed the methods in the parser classes (CIM_ML and CIM_SL) to for a better understanding of what they do

-HardwareID now generates an MD5 digest of CPUID and DiskIDs